fix(router): specify operation IDs on routes
