# openapi/schema.json
@@ -20,7 +20,7 @@
           "asset_type"
         ],
         "summary": "List all asset types.",
-        "operationId": "list",
+        "operationId": "list_asset_types",
         "responses": {
           "200": {
             "description": "Success",
@@ -52,7 +52,7 @@
           "asset_type"
         ],
         "summary": "Create an asset type.",
-        "operationId": "create",
+        "operationId": "create_asset_type",
         "requestBody": {
           "content": {
             "application/json": {
@@ -103,7 +103,7 @@
           "asset_type"
         ],
         "summary": "Get an asset type by its ID.",
-        "operationId": "get_by_id",
+        "operationId": "get_asset_type_by_id",
         "parameters": [
           {
             "name": "id",
@@ -153,7 +153,7 @@
           "asset_type"
         ],
         "summary": "Update all fields of an asset type by its ID.",
-        "operationId": "update",
+        "operationId": "update_asset_type_by_id",
         "parameters": [
           {
             "name": "id",
@@ -213,7 +213,7 @@
           "asset_type"
         ],
         "summary": "Delete an asset type by its ID.",
-        "operationId": "delete",
+        "operationId": "delete_asset_type_by_id",
         "parameters": [
           {
             "name": "id",
@@ -256,7 +256,7 @@
           "asset_type"
         ],
         "summary": "Patch individual fields of an asset type by its ID.",
-        "operationId": "patch",
+        "operationId": "patch_asset_type_by_id",
         "parameters": [
           {
             "name": "id",
@@ -318,7 +318,7 @@
           "auth"
         ],
         "summary": "List authentication providers.",
-        "operationId": "list_providers",
+        "operationId": "list_auth_providers",
         "responses": {
           "200": {
             "description": "Success",
@@ -342,7 +342,7 @@
           "group"
         ],
         "summary": "List groups.",
-        "operationId": "list",
+        "operationId": "list_groups",
         "responses": {
           "200": {
             "description": "Success",
@@ -364,7 +364,7 @@
           "group"
         ],
         "summary": "Create group.",
-        "operationId": "create",
+        "operationId": "create_group",
         "requestBody": {
           "content": {
             "application/json": {
@@ -395,7 +395,7 @@
           "group"
         ],
         "summary": "Get group.",
-        "operationId": "get",
+        "operationId": "get_group_by_id",
         "parameters": [
           {
             "name": "group_id",
@@ -430,7 +430,7 @@
           "group"
         ],
         "summary": "List group members.",
-        "operationId": "list",
+        "operationId": "list_group_members",
         "parameters": [
           {
             "name": "group_id",
@@ -463,7 +463,7 @@
           "group"
         ],
         "summary": "Add user to group.",
-        "operationId": "add",
+        "operationId": "add_user_to_group",
         "parameters": [
           {
             "name": "group_id",
@@ -499,7 +499,7 @@
           "group"
         ],
         "summary": "Remove user from group.",
-        "operationId": "remove",
+        "operationId": "remove_user_from_group",
         "parameters": [
           {
             "name": "group_id",
@@ -537,7 +537,7 @@
           "group"
         ],
         "summary": "List group permissions.",
-        "operationId": "list",
+        "operationId": "list_group_permissions",
         "parameters": [
           {
             "name": "group_id",
@@ -573,7 +573,7 @@
           "group"
         ],
         "summary": "Grant permission to group.",
-        "operationId": "add",
+        "operationId": "add_permission_to_group",
         "parameters": [
           {
             "name": "group_id",
@@ -609,7 +609,7 @@
           "group"
         ],
         "summary": "Revoke permission from group.",
-        "operationId": "remove",
+        "operationId": "remove_permission_from_group",
         "parameters": [
           {
             "name": "group_id",
@@ -681,7 +681,7 @@
           "manufacturer"
         ],
         "summary": "List all manufacturers.",
-        "operationId": "list",
+        "operationId": "list_manufacturers",
         "responses": {
           "200": {
             "description": "Success",
@@ -713,7 +713,7 @@
           "manufacturer"
         ],
         "summary": "Create a manufacturer.",
-        "operationId": "create",
+        "operationId": "create_manufacturer",
         "requestBody": {
           "content": {
             "application/json": {
@@ -754,7 +754,7 @@
           "manufacturer"
         ],
         "summary": "Get a manufacturer by its ID.",
-        "operationId": "get_by_id",
+        "operationId": "get_manufacturer_by_id",
         "parameters": [
           {
             "name": "id",
@@ -804,7 +804,7 @@
           "manufacturer"
         ],
         "summary": "Update all fields of a manufacturer by its ID.",
-        "operationId": "update",
+        "operationId": "update_manufacturer_by_id",
         "parameters": [
           {
             "name": "id",
@@ -864,7 +864,7 @@
           "manufacturer"
         ],
         "summary": "Delete a manufacturer by its ID.",
-        "operationId": "delete",
+        "operationId": "delete_manufacturer_by_id",
         "parameters": [
           {
             "name": "id",
@@ -907,7 +907,7 @@
           "manufacturer"
         ],
         "summary": "Patch individual fields of a manufacturer by its ID.",
-        "operationId": "patch",
+        "operationId": "patch_manufacturer_by_id",
         "parameters": [
           {
             "name": "id",
@@ -993,7 +993,7 @@
           "user"
         ],
         "summary": "Get current user.",
-        "operationId": "current_user",
+        "operationId": "get_current_user",
         "responses": {
           "200": {
             "description": "Success",
@@ -1014,7 +1014,7 @@
           "user"
         ],
         "summary": "Get the current user's permissions.",
-        "operationId": "current_user_permissions",
+        "operationId": "get_current_user_permissions",
         "responses": {
           "200": {
             "description": "Success",
